# Specialisterne-Case---ETL-Pipeline

./: .gitignore  README.md  compose.yaml
REST_API/: CMakeCache.txt  CMakeLists.txt  bme280_handler.c  build.bat  dmi_handler.c  ds180b20_handler.c  handler.c  humidity_data_handler.c  main.c  main_run.sh  nginx.conf  postgres_handler.c  pressure_data_handler.c  response_builder.c  scd41_handler.c  temperature_data_handler.c  user_handler.c  utils.c  vcpkg-configuration.json  vcpkg.json
REST_API/headers/: bme280_handler.h  dmi_handler.h  ds180b20_handler.h  handler.h  humidity_data_handler.h  postgres_handler.h  pressure_data_handler.h  response_builder.h  scd41_handler.h  temperature_data_handler.h  user_handler.h  utils.h
REST_API/include/: microhttpd.h  postgres_ext.h
REST_API/scripts/: compiler.sh  docker_run.bat  docker_run.ps1  docker_run.sh
app/: config.py  main.py
app/load/db/: CRUD.py  initialize.py
app/pipeline/: etl.py
